fix concert, bring back toggle buttons

--- a/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
@@ -81,6 +81,7 @@
             android:layout_weight="10">
 
             <ImageView
+                android:visibility="invisible"
                 android:id="@+id/imageViewSwapCamera"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
