--- a/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
@@ -20,6 +20,7 @@
 
 
     <ImageView
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
