--- a/visionSamples/FaceTracker/app/src/main/res/layout/activity_logo.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/activity_logo.xml
@@ -7,6 +7,7 @@
     tools:context="com.adapter.oishi.LogoActivity">
 
     <ImageView
+        android:id="@+id/imageView"
         android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
