--- a/visionSamples/FaceTracker/app/src/main/res/layout/activity_finish_record.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/activity_finish_record.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_finish_record"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.google.android.gms.samples.vision.face.facetracker.com.adapter.android.gms.samples.vision.face.facetracker.FinishRecordActivity">
+    android:layout_height="match_parent" >
 
     <VideoView
         android:id="@+id/videoView"
