--- a/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
@@ -84,6 +84,8 @@
                 android:id="@+id/imageViewSwapCamera"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_alignParentRight="true"
                 android:src="@drawable/swap_camera_button"/>
         </RelativeLayout>
@@ -97,6 +99,7 @@
                 android:id="@+id/toggleButtonEyes"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginRight="8dp"
                 android:layout_alignParentRight="true"
                 android:textOff=""
                 android:textOn=""
@@ -106,6 +109,7 @@
                 android:id="@+id/toggleButtonMouth"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginRight="8dp"
                 android:layout_alignParentRight="true"
                 android:textOff=""
                 android:textOn=""
@@ -116,6 +120,7 @@
                 android:id="@+id/toggleButtonEars"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginRight="8dp"
                 android:layout_alignParentRight="true"
                 android:textOff=""
                 android:textOn=""
