--- a/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/frame"/>
+        android:src="@drawable/bg_record_frame"/>
 
     <FrameLayout
         android:id="@+id/layoutCheek"
@@ -109,6 +109,7 @@
                 android:id="@+id/toggleButtonMouth"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:layout_alignParentRight="true"
                 android:textOff=""
@@ -120,12 +121,25 @@
                 android:id="@+id/toggleButtonEars"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:layout_alignParentRight="true"
                 android:textOff=""
                 android:textOn=""
                 android:layout_below="@+id/toggleButtonMouth"
                 android:background="@drawable/ear" />
+
+            <ToggleButton
+                android:id="@+id/toggleButtonFace"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="8dp"
+                android:layout_alignParentRight="true"
+                android:textOff=""
+                android:textOn=""
+                android:layout_below="@+id/toggleButtonEars"
+                android:background="@drawable/face" />
 
 
             <ToggleButton
@@ -141,8 +155,40 @@
                 android:background="@drawable/record" />
 
         </RelativeLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="100" >
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="87">
+        </RelativeLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:weightSum="100"
+            android:layout_weight="10">
+
+            <RelativeLayout
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="62">
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="36"
+                android:src="@drawable/img_record_logo"
+                android:scaleType="fitXY"/>
+        </LinearLayout>
 
     </LinearLayout>
 
