fix brink bug but remover slow down

--- a/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/main.xml
@@ -139,6 +139,7 @@
                 android:textOff=""
                 android:textOn=""
                 android:layout_below="@+id/toggleButtonEars"
+                android:visibility="gone"
                 android:background="@drawable/face" />
 
 
