--- a/visionSamples/FaceTracker/app/src/main/res/layout/activity_splash.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/layout/activity_splash.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_splash"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.google.android.gms.samples.vision.face.facetracker.com.adapter.android.gms.samples.vision.face.facetracker.SplashActivity">
+    android:layout_height="match_parent" >
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
